--- a/css/clock.css
+++ b/css/clock.css
@@ -9,11 +9,11 @@
             color: #555;
             display: inline-block;
             letter-spacing: 1px;
+            flex: 1;
         }
 
         .clock {
-            height: 200px;
-            width: 200px;
+            width: 220px;
             background-color: #000000;
             padding: 20px;
             margin: 125px auto;
@@ -21,50 +21,17 @@
 
         .row {
             height: 25px;
-            text-align: justify;
+            display: flex;
+        }
+
+        span:nth-child(2) {
+            text-align: center;
+        }
+
+        span:last-child {
+            text-align: right;
         }
 
         .on {
             color: white;
-        }
-
-        .oclock,
-        .ten,
-        .twenty,
-        .to,
-        .three,
-        .five2,
-        .eight,
-        .eleven {
-            float: right;
-        }
-
-        .half {
-            margin-left: 35px;
-            margin-right: 35px;
-        }
-
-        .minutes {
-            margin-left: 23px;
-            margin-right: 23px;
-        }
-
-        .one {
-            margin-left: 26px;
-            margin-right: 22px;
-        }
-
-        .four {
-            margin-left: 26px;
-            margin-right: 26px;
-        }
-
-        .seven {
-            margin-left: 20px;
-            margin-right: 20px;
-        }
-
-        .ten2 {
-            margin-left: 18px;
-            margin-right: 18px;
         }
